--- a/.github/workflows/cicd_gradle.yml
+++ b/.github/workflows/cicd_gradle.yml
@@ -24,6 +24,7 @@ jobs:
 
     - name: 2) Convert to prod config
       run: |
+        mkdir ./src/main/resources
         cd ./src/main/resources
         [ -e "application.yml" ] && rm application.yml
         echo ${{ secrets.YML }} > application.yml
