--- a/.github/workflows/cicd_gradle.yml
+++ b/.github/workflows/cicd_gradle.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: 2) Convert to prod config
       run: |
-        mkdir ./src/main/resources
+        mkdir -p ./src/main/resources
         cd ./src/main/resources
         [ -e "application.yml" ] && rm application.yml
         echo ${{ secrets.YML }} > application.yml
@@ -53,5 +53,5 @@ jobs:
           sudo docker rm ${{ secrets.SERVER_NAME }}
           sudo docker rmi ${{ secrets.DOCKER_REPO }}
           sudo docker pull ${{ secrets.DOCKER_REPO }}
-          docker run --name cogo-server -p 8080:8080 -d ${{ secrets.DOCKER_REPO }}
+          docker run --name ${{ secrets.SERVER_NAME }} -p 8080:8080 -d ${{ secrets.DOCKER_REPO }}
   
