--- a/.github/workflows/cicd_gradle.yml
+++ b/.github/workflows/cicd_gradle.yml
@@ -43,21 +43,21 @@ jobs:
           spring.mail.sender: ${{ secrets.MAIL_SENDER }}
           spring.mail.password: ${{ secrets.MAIL_PASSWORD }}
           spring.jwt.secret: ${{ secrets.JWT_SECRET }}
-          spring.security.oauth2.client.registration.naver.client-id: ${{ NAVER_CLIENT_ID }}
-          spring.security.oauth2.client.registration.naver.client-secret: ${{ NAVER_CLIENT_SECRET }}
-          spring.security.oauth2.client.registration.naver.redirect-uri: ${{ NAVER_REDIRECT_URI }}
-          spring.security.oauth2.client.registration.google.client-id: ${{ GOOGLE_CLIENT_ID }}
-          spring.security.oauth2.client.registration.google.client-secret: ${{ GOOGLE_CLIENT_SECRET }}
-          spring.security.oauth2.client.registration.google.redirect-uri: ${{ GOOGLE_REDIRECT_URI }}
-          spring.security.oauth2.client.registration.kakao.client-id: ${{ KAKAO_CLIENT_ID }}
-          spring.security.oauth2.client.registration.kakao.client-secret: ${{ KAKAO_CLIENT_SECRET }}
-          spring.security.oauth2.client.registration.kakao.redirect-uri: ${{ KAKAO_REDIRECT_URI }}
-          spring.security.oauth2.client.provider.naver.authorization-uri: ${{ NAVER_AUTH_URI }}
-          spring.security.oauth2.client.provider.naver.token-uri: ${{ NAVER_TOKEN_URI }}
-          spring.security.oauth2.client.provider.naver.user-info-uri: ${{ NAVER_INFO_URI }}
-          spring.security.oauth2.client.provider.kakao.authorization-uri: ${{ KAKAO_AUTH_URI }}
-          spring.security.oauth2.client.provider.kakao.token-uri: ${{ KAKAO_TOKEN_URI }}
-          spring.security.oauth2.client.provider.kakao.user-info-uri: ${{ KAKAO_INFO_URI }}
+          spring.security.oauth2.client.registration.naver.client-id: ${{ secrets.NAVER_CLIENT_ID }}
+          spring.security.oauth2.client.registration.naver.client-secret: ${{ secrets.NAVER_CLIENT_SECRET }}
+          spring.security.oauth2.client.registration.naver.redirect-uri: ${{ secrets.NAVER_REDIRECT_URI }}
+          spring.security.oauth2.client.registration.google.client-id: ${{ secrets.GOOGLE_CLIENT_ID }}
+          spring.security.oauth2.client.registration.google.client-secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          spring.security.oauth2.client.registration.google.redirect-uri: ${{ secrets.GOOGLE_REDIRECT_URI }}
+          spring.security.oauth2.client.registration.kakao.client-id: ${{ secrets.KAKAO_CLIENT_ID }}
+          spring.security.oauth2.client.registration.kakao.client-secret: ${{ secrets.KAKAO_CLIENT_SECRET }}
+          spring.security.oauth2.client.registration.kakao.redirect-uri: ${{ secrets.KAKAO_REDIRECT_URI }}
+          spring.security.oauth2.client.provider.naver.authorization-uri: ${{ secrets.NAVER_AUTH_URI }}
+          spring.security.oauth2.client.provider.naver.token-uri: ${{ secrets.NAVER_TOKEN_URI }}
+          spring.security.oauth2.client.provider.naver.user-info-uri: ${{ secrets.NAVER_INFO_URI }}
+          spring.security.oauth2.client.provider.kakao.authorization-uri: ${{ secrets.KAKAO_AUTH_URI }}
+          spring.security.oauth2.client.provider.kakao.token-uri: ${{ secrets.KAKAO_TOKEN_URI }}
+          spring.security.oauth2.client.provider.kakao.user-info-uri: ${{ secrets.KAKAO_INFO_URI }}
 
       - name: 4) Grant permission
         run: chmod +x ./gradlew
