--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,8 +2,9 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${{ DB_URL }}
-    username: $${ DB_USERNAME }
-    password: $${ DB_PASSWORD }
+    username: ${{ DB_USERNAME }}
+    password: ${{ DB_PASSWORD }}
+    
   jpa:
     hibernate:
       ddl-auto: update
@@ -14,6 +15,7 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+        
   mail:
     host: ${{ MAIL_HOST}}
     port: ${{ MAIL_PORT}}
@@ -25,9 +27,10 @@ spring:
           auth: true
           starttls:
             enable: true
-
+            
   jwt:
     secret: ${{ JWT_SECRET }}
+    
   security:
     oauth2:
       client:
