--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${{ DB_URL }}
-    username: ${{ DB_USERNAME }}
+    username: admin
     password: ${{ DB_PASSWORD }}
     
   jpa:
