--- a/.github/workflows/cicd_gradle.yml
+++ b/.github/workflows/cicd_gradle.yml
@@ -23,8 +23,8 @@ jobs:
       - name: 2) Convert to prod config (env)
         run: |
           cd ./src/main/resources
-          touch ./application.yml
-          echo "${{ secrets.APPLICATION_PROD }}" > ./application.yml
+          touch ./application-prod.yml
+          echo "${{ secrets.APPLICATION_PROD }}" > ./application-prod.yml
 
 
       - name: 4) Grant permission
